<resources>
    <string name="tab_expenses">Expenses</string>
    <string name="tab_shopping_items">Shopping-Items</string>
    <string name="tab_cash_disbursements">Cash</string>
    <string name="login_subtitle">Please sign in with your Google Account</string>
    <string name="error_generic_title">Unhandled Error</string>
    <string name="error_generic_body">An unhandled error occurred.</string>
    <string name="error_connection_title">No Internet Connection</string>
    <string name="error_connection_body">Please connect your cellphone to the Internet.</string>
    <string name="error_generic">Something very bad happened. Please try again.</string>
    <string name="error_invalid_secret">The secret was incorrect.</string>
    <string name="error_no_such_household">No household for provided email found.</string>
    <string name="create_household_title">Create a Household</string>
    <string name="create_join_household_intro">In order to use the app, you need to create or join a household. You can join your mates household by his or her e-mail. Or create your own and invite another person to it.</string>
    <string name="create_join_household_join_mail_hint">Your mate\'s mail</string>
    <string name="create_join_household_join_groupheader">Join a Household</string>
    <string name="create_join_household_create_groupheader">or Create your own</string>
    <string name="create_join_household_join_name_hint">Name</string>
    <string name="done">Done</string>
    <string name="expense_overview_title">Expenses</string>
    <string name="edit_expense_title">Edit Expense</string>
    <string name="create_expense_title">Create Expense</string>
    <string name="join_household">Join</string>
    <string name="join_household_title">Join a Household</string>
    <string name="create_household">create your own household</string>
    <string name="create_edit_expense_cause_hint">Cause</string>
    <string name="create_edit_expense_amount_hint">Amount</string>
    <string name="save">save</string>
    <string name="placeholder">Coming in the future…</string>
    <string name="create_join_household_button">join an existing household</string>
    <string name="create_join_household_secret_hint">Household Secret</string>
    <string name="join_household_info">Enter the E-Mail address of the household owner below. Also, you will have to ask him or her for the household\'s secret.</string>
    <string name="delete_action_title">Delete</string>
    <string name="create_household_intro">Setup your own household to start using the app. Just enter a name and a secret below to start.</string>
    <string name="action_clear_expenses">Bill All</string>
    <string name="notification_expense_title">New Expense</string>
    <string name="notification_expense_body">%1$s bought %2$s for %3$s.</string>
    <string name="shopping_items_overview_title">Shopping Items</string>
    <string name="shopping_item_group_placeholder">General</string>
    <string name="create_edit_shopping_item_name_hint">Name</string>
    <string name="create_edit_shopping_item_create">Create Shopping Item</string>
    <string name="create_edit_shopping_item_edit">Edit Shopping Item</string>
    <string name="tag">Tag</string>
</resources>
